# ModelConverter

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: FindSDL2.cmake
media/: samples.xml  test-samples.xml
scripts/: gendataset.sh
src/: ModelConverter.srctrlprj  ModelSamplerApp.cpp  ModelSamplerApp.h  main.cpp  modelSampler.cpp  system.h  test.md5mesh
src/base/: .AnimationTransition.cpp.kate-swp  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationFrame.cpp  AnimationFrame.h  AnimationManager.cpp  AnimationManager.h  AnimationTransition.cpp  AnimationTransition.h  AutoRig.cpp  AutoRig.h  BBox.cpp  BBox.h  Camera.cpp  Camera.h  CollisionManager.cpp  CollisionManager.h  Cube.cpp  Cube.h  Joint.cpp  Joint.h  MDLImporter.cpp  MDLImporter.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  Model.cpp  Model.h  Octree.cpp  Octree.h  Ray.cpp  Ray.h  RectangularPrism.cpp  RectangularPrism.h  Skeleton.cpp  Skeleton.h  SkeletonPose.h  (+6 more)
src/entity/: DynamicEntity.cpp  DynamicEntity.h  Entity.cpp  Entity.h  EntityAction.cpp  EntityAction.h  EntityManager.cpp  EntityManager.h  EntityShape.cpp  EntityShape.h  EntityStatus.cpp  EntityStatus.h  JumpAction.cpp  JumpAction.h  PlayerEntity.cpp  PlayerEntity.h
src/event/: Action.h  Event.cpp  Event.h  EventCallback.h  EventListener.h  EventManager.cpp  EventManager.h  EventTypes.h
src/game/: GameApp.cpp  GameApp.h  ShootEvent.cpp  ShootEvent.h
src/image/: BMPLoader.cpp  BMPLoader.h  Image.cpp  Image.h  Imagefactory.cpp  Imagefactory.h  PNGLoader.cpp  PNGLoader.h  PPMReader.cpp  PPMReader.h  TGALoader.cpp  TGALoader.h
src/input/: InputAction.cpp  InputAction.h  InputManager.cpp  InputManager.h  JumpAction.cpp  JumpAction.h
src/math/: MPlane.h  MTransform.h  MVector2.h  MVector3.h  Matrix4x4.cpp  Matrix4x4.h  math.h  mmatrix3.h  mmatrix4.cpp  mmatrix4.h  mquaternion.cpp  mquaternion.h
src/md5/: MD5Converter.cpp  MD5Converter.h  MD5Exporter.cpp  MD5Exporter.h  Options.cpp  Options.h  md5animation.cpp  md5animation.h  md5animbaseframe.cpp  md5animbaseframe.h  md5animbound.cpp  md5animbound.h  md5animframe.cpp  md5animframe.h  md5animjoint.cpp  md5animjoint.h  md5animjointlocation.cpp  md5animjointlocation.h  md5command.cpp  md5command.h  md5joint.cpp  md5joint.h  md5mesh.cpp  md5mesh.h  md5model.cpp  md5model.h  md5reader.cpp  md5reader.h  md5renderer.cpp  md5renderer.h  md5triangle.cpp  md5triangle.h  md5vertex.cpp  md5vertex.h  md5weight.cpp  md5weight.h  md5writer.cpp  md5writer.h
src/mdl/: MDLAnimation.cpp  MDLAnimation.h  MDLBodyParts.cpp  MDLBodyParts.h  MDLFrame.cpp  MDLFrame.h  MDLJoint.cpp  MDLJoint.h  MDLMesh.cpp  MDLMesh.h  MDLModel.cpp  MDLModel.h  MDLReader.cpp  MDLReader.h  MDLSkeleton.cpp  MDLSkeleton.h  MDLSubModel.cpp  MDLSubModel.h  MDLTexture.cpp  MDLTexture.h  mdlspecs.h
src/resources/: ResourceFile.cpp  ResourceFile.h  ResourceManager.cpp  ResourceManager.h
src/resources/parser/: ResourceDef.cpp  ResourceDef.h  ResourcesFileParser.cpp  ResourcesFileParser.h
src/samplesdescriptor/: SamplesConfig.cpp  SamplesConfig.h  SamplesConfigParser.cpp  SamplesConfigParser.h
src/test/: TestBBox.cpp  TestMath.cpp  TestMeshUtils.cpp  TestTriangle.cpp
src/util/: Fsm.cpp  Fsm.h  Grid2D.cpp  Grid2D.h  Grid3D.cpp  Grid3D.h  ImageUtils.cpp  ImageUtils.h  PRNG.h  Point2D.h  Point3D.h  PoissonDiskAlg.cpp  PoissonDiskAlg.h  PoissonDiskAlg3D.cpp  PoissonDiskAlg3D.h  TimeUtils.cpp  TimeUtils.h  Triangle.cpp  Triangle.h  TriangleUtil.h  Triangles.h  floatbuffer.cpp  floatbuffer.h  intbuffer.cpp  intbuffer.h  log.cpp  tokenizer.cpp  tokenizer.h
src/util/xml/: XMLEventHandler.h  XMLParserUtil.cpp  XMLParserUtil.h
src/viewer/: ArbProgram.cpp  ArbProgram.h  DataManager.h  DataManager.inl  Font.cpp  Font.h  GLRender.cpp  GLRender.h  ImageX.cpp  ImageX.h  Md5Model.cpp  Md5Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Viewer.cpp  Viewer.h
